- Fix word wrapping in message-part's <PRE>s for printing (#1485787)

--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -820,6 +820,7 @@ div.message-htmlpart a
 }
 
 div.message-part pre,
+div.message-htmlpart pre,
 div.message-part div.pre
 {
   margin: 0px;
